Fix alignment issue

--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -12714,7 +12714,7 @@ pre .code {
 
     @media screen and (max-width: 768px) {
       .social-zz {
-        margin-top: 80px;
+        margin-top: 100px;
       }
     }
     
