--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12683,7 +12683,7 @@ margin-top: 80px;
       }
     }
     
-    .social-zz {
+    /* .social-zz {
     
       margin-top: 20px;
     }
@@ -12698,7 +12698,7 @@ margin-top: 80px;
     
     .social-zz a:hover {
       color: #444;
-    }
+    } */
     
     .ti-facebook:before {
       /* content: "\e088"; */
